--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,33 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 body {
-  background: linear-gradient(
-    121deg,
-    rgba(91, 15, 110, 0.85) 33%,
-    rgba(25, 15, 110, 0.9) 79%
+  background: radial-gradient(
+    circle,
+    rgba(91, 15, 110, 1) 33%,
+    rgba(25, 15, 110, 1) 100%
   );
 }
-
 
 .grow {
   transition: all 0.2s ease-in-out;
 }
 .grow:hover {
   transform: scale(1.2);
+}
+
+.title-text {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: #55007b;
+  font-size: 2rem;
+  margin: 1rem 0px;
+}
+
+.return-wrapper {
+  text-align: right;
+  margin-top: 1rem;
+}
+
+.header-wrapper {
+  display: flex;
+  justify-content: center;
 }
